k8s/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pizza-ingress
  namespace: pizza-hub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pizza.local
    secretName: pizza-tls
  rules:
  - host: pizza.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pizza-app-svc
            port:
              number: 80
